--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img src="Photos/asd.webp" alt="Minecraft Image">
 
         
-        <h3>Left 4 Dead 2 - Official Trailer</h3>
+        <h3>Minecraft - Official Trailer</h3>
         <div class="video-container">
             <iframe 
                 src="https://www.youtube.com/embed/MmB9b5njVbA"
@@ -83,4 +83,5 @@
     </div>
 
 </body>
+
 </html>
