--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="video-container">
             <iframe 
                 src="https://www.youtube.com/embed/MmB9b5njVbA"
-                title="Left 4 Dead 2 Trailer"
+                title="Minecraft Trailer"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen>
@@ -85,3 +85,4 @@
 </body>
 
 </html>
+
